tests/ui/for/for-expn.stderr
error[E0425]: cannot find value `foo` in this scope
  --> $DIR/for-expn.rs:6:7
   |
LL |       foo
   |       ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
